# speakez

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix
crates/client/: Cargo.toml
crates/client/schemas/: types.d.ts
crates/client/src/: commands.rs  lib.rs  main.rs  network.rs  tls.rs
crates/client/src/audio/: input.rs  mod.rs  output.rs  state.rs
crates/client/src/mumble/: crypt_openssl.rs
crates/client/tests/: generate-schema.rs
crates/libopus/: Cargo.toml
crates/libopus/src/: lib.rs
crates/libopus/tests/: encoder.rs
crates/opus-sys/: Cargo.toml  build.rs
crates/opus-sys/src/: lib.rs  wrapper.h
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
crates/server/src/mumble/: crypt.rs  mod.rs
crates/server/src/server/tokio/: mod.rs  shutdown.rs  tcp.rs  udp.rs  unix_socket.rs
crates/speakez/: Cargo.toml  build.rs
crates/speakez/benches/: example.rs
crates/speakez/src/: lib.rs
crates/speakez/src/client/: actions.rs  handshake.rs  mod.rs  voice.rs
crates/speakez/src/common/: events.rs  mod.rs
crates/speakez/src/mumble/: control.rs  handshake.rs  mod.rs  mumble.proto  mumbleUDP.proto  permissions.rs  session.rs  version.rs  voice.rs
crates/speakez/src/mumble/proto/: control.rs  mod.rs  voice.rs
crates/speakez/src/server/: handshake.rs  messages.rs  mod.rs  state.rs
crates/speakez/src/tracing/: mod.rs
crates/web/: Cargo.toml
crates/web/schemas/: speakez.d.ts
crates/web/scripts/: build.sh
crates/web/src/: handshake.rs  lib.rs  messages.rs
scripts/: build-opus-wasm.sh  link-opus-wasm.sh
web/client/: .gitignore  README.md  tailwind.config.js  tsconfig.json
web/client/css/: styles.css
web/client/html/: main.html  tauri.html
web/client/html/design/: server-view.html
web/client/js/: index.js  state.js  tauri-index.js
web/client/js/audio/: audio.js  voice.js
web/client/js/audio/processors/: record-processor.js  shared-playback.js
web/client/js/audio/workers/: playback.js  recorder.js
web/client/js/lib/: html.js  libopus.js  ringbuf.js  util.js
web/client/js/lib/dev/: reload.js  state.js
web/client/js/mumble/: client.js  index.js  worker.js
web/client/js/views/: app.js  hooks.js  index.js  navbar.js  router.js  settings.js
web/client/js/views/server/: channels.js  list.js  messages.js  user.js  view.js
web/client/scripts/: build.sh
web/proxy/: go.mod  go.sum  main.go
web/proxy/mumble/: control.go
web/tauri/src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json  tauri.ios.conf.json
web/tauri/src-tauri/src/: client.rs  commands.rs  lib.rs
