[package]
name = "speakez-server"
version = "0.1.0"
edition = "2021"

[dependencies]
speakez = { path = "../speakez" }

bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [] }

aws-lc-rs = { workspace = true }
aes = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = "0.26.0"

[dependencies.tokio]
version = "1.37.0"
features = ["rt", "rt-multi-thread", "signal", "net", "sync", "io-util", "macros", "time"]
