[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
speakez-client = { path = "../../../crates/client", features = ["serde"] }

rustls = "0.23.10"
rustls-platform-verifier = "0.4.0"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

tauri = { version = "2.0.6", features = [] }
# Needed to work on ios
aws-lc-rs = { version = "1.11.1", features = ["bindgen"] }
tauri-plugin-log = "2.0.0-rc"
rand = "0.8.5"

[dependencies.tokio]
version = "1.41.0"
features = ["rt", "signal", "net", "sync", "io-util", "macros", "time"]
